Fix style so text won't overflow out.

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -333,6 +333,7 @@
         .settings {
             padding: 14px;
             background-color: #f8f8f8;
+            overflow: hidden;
         }
     }
 }
